<resources>
    <string name="app_name">Avesso da Leitura Teste</string>

    <string name="txt1">Professor de literatura negro que foi assassinado por policiais durante uma abordagem. Sua vida é o centro da história, marcada por episódios de racismo e um sistema educacional falido.</string>
    <string name="txt2">Filho de Henrique, conta a história do pai, investigando suas origens e o passado da família enquanto narra as próprias vivências.</string>
    <string name="txt3">Mãe de Pedro, teve uma vida de perdas, somadas à dificuldade de ser mulher em uma sociedade racista e misógina.</string>
    <string name="opiniao1">O livro trata de temas pertinentes na nossa sociedade, fala de problemáticas atuais. Avesso da Pele traz muita carga cultural, ótima leitura.</string>
    <string name="opiniao2">O avesso da pele fala de amor, racismo, luta, identidade. Por ser uma leitura obrigatória da UFRGS, agrega muito.</string>
    <string name="opinao3">O livro deveria ser leitura essencial para todos. Jeferson Tenório desenvolve assuntos extremamente sensíveis em uma prosa altamente fluída.</string>
    <string name="opiniao4">Leitura ótima que narra o peso de ser uma pessoa negra em uma realidade racista institucionalizada, além de críticas ao sistema educativo e relações abusivas.</string>

    <string name="texto1">"Quem nunca teve uma ferida de meio centímetro dentro de si, talvez pense que não seja grande coisa. Entretanto, você sabia o que era ter uma ferida de meio centímetro, sem ter plano de saúde nem dinheiro."</string>
    <string name="texto2">"Depois começou a perder os sentidos. Então alguém sacou uma arma e apontou para a sua cabeça, você ainda pode ouvir um deles gritando: nós vamo te passar, neguim, tu vai morrê agora, neguim."</string>
    <string name="texto3">"Foi a primeira vez que você sentiu o ferro frio de uma algema nos pulsos. E ser confundido com bandido vai fazer parte da sua trajetória."</string>

    <string name="txtTituloNasciPedro">Nascimento de Pedro</string>
    <string name="txtInfoPedro">Pedro cresce em uma comunidade negra, em uma família humilde e tem uma vida marcada por racismo e dificuldades financeiras.</string>
    <string name="txtTituloAcadEMilitPedro">Vida Acadêmica e Militância de Pedro</string>
    <string name="txtInfoAcadEMilit">Pedro se interessa por questões sociais e políticas, começa a estudar na universidade e se engaja em movimentos estudantis e militância racial.</string>
    <string name="txtTituloEncPedroEMarta">Encontro de \n Pedro e Marta</string>
    <string name="txtInfoEncPedro">Pedro conhece Marta, que será sua esposa e mãe de Henrique. Ela é uma figura importante, mas enfrenta dificuldades em lidar com o ativismo e o isolamento de Pedro.</string>
    <string name="txtTituloNasciHenri">Nascimento de \n Henrique</string>
    <string name="txtInfoHenri">Henrique nasce e cresce em um contexto de tensões familiares. Sua relação com o pai é marcada por uma tentativa constante de compreensão e conexão.</string>

    <string name="txtTituloPedroProf">Pedro Torna-se \n Professor</string>
    <string name="txtInfoPedroProf">Pedro, apesar de todas as dificuldades e discriminações, consegue se formar e tornar-se professor de história. No entanto, ele continua enfrentando o racismo no ambiente de trabalho.</string>
    <string name="txtTituloViolenPoli">Violência Policial</string>
    <string name="txtInfoViolenPoli">Um dos eventos centrais do livro é a morte de Pedro, vítima da brutalidade policial. Esse fato ocorre quando Henrique ainda é jovem e marca profundamente sua trajetória.</string>
    <string name="txtTituloRefHenri">Reflexões de Henrique</string>
    <string name="txtInfoRefHenri">Após a morte do pai, Henrique, agora adulto, reflete sobre as memórias e as lições que Pedro deixou. Ele tenta entender quem seu pai era, seus sonhos, suas lutas e o impacto de seu legado.</string>
    <string name="txtTituloIdentHenri">Busca de Henrique \n pela Identidade</string>
    <string name="txtInfoIdentHenri">Henrique mergulha em uma busca por sua própria identidade, enquanto tenta reconstruir a imagem do pai a partir de memórias fragmentadas e da ausência causada pela violência racial.</string>

    <string name="fofoca1">"O livro vem sendo alvo de ataques desde 2022, quando Tenório sofreu ameaças de morte ao anunciar que faria uma palestra em uma escola de Salvador. Rio Grande do Sul, pediu a retirada do título das instituições de ensino."</string>
    <string name="fofoca2">"A Companhia das Letras afirmou que a retirada de exemplares de um livro, baseada em uma interpretação distorcida e descontextualizada de trechos isolados, é um ato que viola os princípios fundamentais da educação e da democracia, empobrece o debate cultural e mina a capacidade dos estudantes de desenvolverem pensamento crítico e reflexivo."</string>

    <string name="clicarCirculos">Clique sobre as imagens para visualizar a evolução do livro!</string>
</resources>